Add includes to build interface of decaf libs
Apply Modern CMake best practices and use target_include_directories
rather than include_directories for defining where to find header files.
Where possible, scope was reduced to PRIVATE, indicating that the headers
are required only for compilation, not when linking against the target.

Additionally, the generated headers that are required for the decaf libs
to work have been added to their build interface. This means that other
projects that use CMake to build this project will correctly link against
the decaf and decaf-static targets.

--- a/src/p25519/CMakeLists.txt
+++ b/src/p25519/CMakeLists.txt
@@ -4,12 +4,6 @@
 #    Released under the MIT License.  See LICENSE.txt for license information.
 #
 ############################################################################
-include_directories(
-	${PROJECT_SOURCE_DIR}/src/p25519
-	${GSOURCE_PATH}/c/p25519
-	${PROJECT_SOURCE_DIR}/src/p25519/${TARGET_ARCH_DIR_P25519}
-)
-
 set(P25519_HEADER_FILES
 	${GSOURCE_PATH}/c/p25519/f_field.h
 	${TARGET_ARCH_DIR_P25519}/f_impl.h
@@ -25,5 +19,12 @@ SET_SOURCE_FILES_PROPERTIES(${GSOURCE_PATH}/c/p25519/f_generic.c PROPERTIES GENE
 
 add_library(p25519 OBJECT ${P25519_HEADER_FILES} ${P25519_SOURCE_FILES_C})
 add_dependencies(p25519 generatorP25519)
+target_include_directories(p25519
+    PUBLIC ${GSOURCE_PATH}/include
+    PUBLIC ${GSOURCE_PATH}/c/p25519
+    PUBLIC ${TARGET_ARCH_DIR_P25519}
+    PUBLIC ${PROJECT_SOURCE_DIR}/src/include/${TARGET_ARCH_DIR}
+    PUBLIC ${PROJECT_SOURCE_DIR}/src/include
+)
 
 set_target_properties(p25519 PROPERTIES POSITION_INDEPENDENT_CODE True)
