Revert "Add includes to build interface of decaf libs"
This reverts commit 540d9b8158d3cf42a04b4cdf455f1e6d16eaf4de.

The commit appears to break the build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,13 @@ include(GNUInstallDirs)
 include(CheckSymbolExists)
 include(CMakePushCheckState)
 
+include_directories(
+	${GSOURCE_PATH}/include/
+	src/include/
+	src/
+	${CMAKE_CURRENT_BINARY_DIR}
+)
+
 set(STRICT_OPTIONS_CPP )
 set(STRICT_OPTIONS_C )
 set(STRICT_OPTIONS_CXX )
